# sales-platform

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_PLAN.md  REGRESSION_TEST_REPORT.md
.claude/: launch.json  (+2 more)
platform/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
platform/backend/alembic/: env.py
platform/backend/alembic/versions/: 2026_04_06_a1b2c3d4e5f6_add_scoring_signals_and_job_questions.py  2026_04_06_b2c3d4e5f6a7_add_company_intelligence.py  2026_04_06_c3d4e5f6a7b8_add_outreach_fields.py  2026_04_06_d4e5f6a7b8c9_add_funding_signal.py  2026_04_10_e5f6a7b8c9d0_add_feedback_table.py  2026_04_10_f6a7b8c9d0e1_add_pipeline_resume_tracking.py  2026_04_10_g7b8c9d0e1f2_add_pipeline_stages_table.py  2026_04_10_h8c9d0e1f2g3_add_feedback_approval_fields.py  2026_04_10_i9d0e1f2g3h4_add_feedback_screenshot_url.py  2026_04_13_j0e1f2g3h4i5_add_feedback_attachments.py  2026_04_13_k1f2g3h4i5j6_add_alert_configs.py  (+24 more)
platform/backend/app/: audit_job_descriptions.py  cleanup_credentials.py  cleanup_job_status.py  cleanup_junk_companies.py  cleanup_review_tags.py  cleanup_stopword_contacts.py  close_legacy_duplicate_feedback.py  config.py  database.py  dedup_jobs.py  main.py  rescore_unclassified.py  seed_admin.py  seed_data.py  seed_remote_companies.py  seed_test_users.py  trim_oversized_answer_book.py  trim_oversized_feedback.py
platform/backend/scripts/: init_ci_db.py
platform/backend/tests/: conftest.py  test_answer_book_seed.py  test_api.py  test_ats_fingerprint.py  test_celery_oom_hardening.py  test_cluster_taxonomy.py  test_company_careers_url.py  test_cross_platform_dedup.py  test_f266_hn_error_and_pipeline_apps.py  test_f267_null_byte_search.py  test_f268_strict_admin_schemas.py  test_f269_negative_signal_parity.py  test_f270_seed_remote_companies_resilience.py  test_f271_pagination_tiebreaker.py  test_f272_scan_logs_retention.py  test_f273_uvicorn_multi_worker.py  test_f274_jobs_title_trigram.py  test_f275_companies_name_trigram.py  test_fetcher_integration.py  test_force_change_password.py  test_funding_followup_task.py  test_geography_classification.py  test_hackernews_fetcher.py  test_humanizer.py  test_insights_router.py  test_playwright_browser.py  test_profile_docs_vault.py  test_profile_vault_live.py  test_remote_policy.py  test_review_queue_per_user_score.py  test_role_matching_fallback.py  test_routine_preferences.py  test_routine_router.py  test_smoke.py  test_team_pipeline.py  test_work_window.py  test_work_window_full.py  test_yc_waas_fetcher.py
(+332 files in other folders)
